Updated lib, added SPI pin definitions

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -63,6 +63,7 @@ add_executable(${PROJECT_NAME}
         src/GPIO.S
         src/EXTI.S
         src/USART.S
+        src/base.S
 
         src/main.c
         src/sys.c
